Fix Vercel routing - serve all routes through Flask app

--- a/vercel.json
+++ b/vercel.json
@@ -12,12 +12,8 @@
       "dest": "api/index.py"
     },
     {
-      "src": "/(.*\\.(html|css|js|png|jpg|jpeg|gif|svg|ico))",
-      "dest": "/$1"
-    },
-    {
-      "src": "/",
-      "dest": "/usdc_dashboard.html"
+      "src": "/(.*)",
+      "dest": "api/index.py"
     }
   ]
 }
